Criado um formulario na página index com dois input

--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
     <h1>Página Home</h1>
     <a href="vendas.html">Ir para a página de Vendas</a>
 </body>
-</html>
+</html>Adicionado nomes das páginas no Titulos
