--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 <body>
     <h1>Página Home</h1>
     <a href="vendas.html">Ir para a página de Vendas</a>
+    <form>
+        <input type="text" >
+        <input type="text">
+    </form>
 </body>
-</html>Adicionado nomes das páginas no Titulos
+</html>
