--- a/vendas.html
+++ b/vendas.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Página de vendas</h1>
     <p>Vendas = R$ 5000;00</p>
+    <p>Venda 1</p>
+    <p>Venda 2</p>
+    <p>Venda 3</p>
     <a href="index.html">Voltar para página Home</a>
 </body>
 </html>
